sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:29: error: expected class or object definition
def distance(base:Int, position:Int, nbBases:Int):Int={
^SelectBaseball:44: error: expected class or object definition
def trouverTrou():Int = {
^SelectBaseball:60: error: expected class or object definition
def bougerTrouG(P:Int){
^SelectBaseball:65: error: expected class or object definition
def bougerTrouD(P:Int){
^SelectBaseball:70: error: expected class or object definition
def bonJoueurGauche(col:Int):Boolean = {
^SelectBaseball:82: error: expected class or object definition
	def out(msg:String) {
        ^SelectBaseball:87: error: expected class or object definition
	def bringPlayersHome(base:Int) {
        ^SelectBaseball:125: error: expected class or object definition
	def findPlayerBase(start:Int, color:Int):Int = {
        ^SelectBaseball:133: error: expected class or object definition
	def findPlayerPos(base:Int, color:Int):Int = {
        ^SelectBaseball:140: error: Unmatched closing brace '}' ignored here
}
^